Fix - z-index 0 for form-control input group

--- a/src/App.css
+++ b/src/App.css
@@ -401,3 +401,7 @@ table .Actions {
 .mailTooltip .tooltip-inner{
 	max-width: 350px;
 }
+
+.input-group>.form-control:not(:focus).is-valid, .input-group>.form-floating:not(:focus-within).is-valid, .input-group>.form-select:not(:focus).is-valid, .was-validated .input-group>.form-control:not(:focus):valid, .was-validated .input-group>.form-floating:not(:focus-within):valid, .was-validated .input-group>.form-select:not(:focus):valid {
+    z-index: 0;
+}
